[package]
name = "tree_collections"
version = "0.1.3"
edition = "2018"
authors = ["Binkai Tan <binkai@ualberta.ca>", "Da Song <dsong4@ualberta.ca >", "Ruijia Zhang <ruijia4@ualberta.ca >"]
description = "A collection for tree data structures. It provides APIs that allows users to create memory efficient binary search trees, red-black trees and avl trees."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tree_collections"
path = "src/lib.rs"

[dependencies]
criterion = "0.3.3"
rand = "0.7.3"

[[bench]]
name = "benchmarks"
harness = false